@startuml Biblioteca
'https://plantuml.com/class-diagram

class Livro {
    -String isnb
    -String titulo
    -int anoPublicacao
    -List<Autor> autores
    -Editora editora
    -List<Exemplar> exemplares
}

class Exemplar {
    -int idExemplar
    -Biblioteca biblioteca
    -boolean disponivel
    -List<Emprestimo> emprestimos
    -Livro livro
    +void marcarComoEmprestado()
    +void marcarComoDisponivel()
}

class Biblioteca {
    -int idBiblioteca
    -String nome
    -String endereco
    -List<Exemplar> exemplares
    +void adicionarExemplar()
    +List<Exemplar> listarExemplares()
}

class Usuario {
    -int idUsuario
    -String nome
    -String email
    -List<Reserva> reservas
    -List<Emprestimo> emprestimos
    +Reserva fazerReserva()
    +Emprestimo realizarEmprestimo()
}

class Reserva {
    -int idReserva
    -Date dataSolicitacao
    -Date dataExpiracao
    -String status
    -Usuario usuario
    -Exemplar exemplar
    +void cancelarReserva()
    +void confirmarReserva()
}

class Emprestimo {
    -int idEmprestimo
    -Date dataRetirada
    -Date dataDevolucao
    -boolean devolvido
    -Usuario usuario
    -Exemplar exemplar
    +registrarDevolucao(): void
}

class Autor {
    -int idAutor
    -String nome
    -List<livro> livrosEscritos
    +List<livro> buscarLivros()
}

class Editora {
    -int idEditora
    -String nome
    -List<livro> livrosPublicados
}




Livro "1" *-- "*" Exemplar

Biblioteca "1" o-- "*" Exemplar

Usuario "1" -- "*" Reserva

Reserva "*" -- "1" Exemplar

Autor "*" -- "*" Livro


Editora "1" -- "*" Livro

Usuario "1" -- "*" Emprestimo
Exemplar "1" -- "*" Emprestimo



@enduml
